syntax = "proto3";

package ru.amlet.protobuf.generated;

option java_multiple_files = true;

message InitiativeMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message NumberMessage {
    int32 value = 1;
}

service RemoteNumbersService {
    rpc generate(InitiativeMessage) returns (stream NumberMessage);
}
